# Preswald-AIJobs

./: .gitignore  README.md  hello.py  preswald.toml  pyproject.toml  requirements.txt
