[project]
name = "world-stocks-explorer"
version = "0.1.0"
description = "Interactive analysis dashboard for global stock market data"
authors = [
    {name = "Structured Labs Candidate"}
]
dependencies = [
    "preswald>=0.1.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "duckdb>=0.9.0"
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39" 